--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -22,6 +22,7 @@ jobs:
       QTVER: 5.12.9
       QTVERMIN: 512
       UBUNTU_VER: focal
+      QT6VERSION: 6.2.0
     steps:
     - uses: actions/checkout@v2.3.1
       with:
@@ -37,7 +38,7 @@ jobs:
     #- name: Install Qt6
     #  uses: WillBrennan/yaqti@2021.07.29
     #  with:
-    #    version: '6.2.0'
+    #    version: "$QT6VERSION"
     #    os: 'linux'
     #    platform: 'desktop'
     #    modules: 'qtwaylandcompositor'
@@ -45,8 +46,8 @@ jobs:
     - name: Compile build
       shell: bash
       env:
-        QT5_DIR: "opt/qt515"
-        QT6_DIR: "qt/6.2.0"
+        QT5_DIR: "opt/qt$QTVERMIN"
+        QT6_DIR: "qt/$QT6VERSION"
       run: |
         if [[ -e $QT6_DIR ]]; then
           export CMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/$QT6_DIR/gcc_64
