--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -57,9 +57,10 @@ jobs:
         QT_CMAKE_VER="-DUSE_QT6=ON"
         echo $QT_CMAKE_VER
           if [[ -e $QT6_DIR ]]; then
-            curl -sL https://github.com/qurious-pixel/duckstation-ext-qt-minimal/releases/download/v6.2.0/Qt_6.2.0.tar.gz -o dep/msvc/qt/Qt_6.2.0.tar.gz
-            tar -xf Qt_6.2.0.tar.gz
+            curl -sSfLO https://github.com/qurious-pixel/duckstation-ext-qt-minimal/releases/download/v6.2.0/Qt_6.2.0.tar.gz
+            tar -xvf Qt_6.2.0.tar.gz -C dep/msvc/qt/
           fi
+        ls -al . | grep *.gz
         ls -al dep/msvc/qt/
         ls "dep/msvc/qt/${{ env.QT6VERSION }}"
         sudo mv /usr/bin/qmake /usr/bin/qmake5
