--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -56,17 +56,12 @@ jobs:
         set -x
         if [[ ${{ env.USE_QT6 }} == true ]]; then 
         QT_CMAKE_VER="-DUSE_QT6=ON"
-        echo $QT_CMAKE_VER
-        ls -al dep/msvc/qt/
           if [[ ! -e $QT6_DIR ]]; then
             curl -sSfLO https://github.com/qurious-pixel/duckstation-ext-qt-minimal/releases/download/v6.2.0/Qt_6.2.0.tar.gz
-            tar -xvf Qt_6.2.0.tar.gz -C dep/msvc/qt/
+            tar -xf Qt_6.2.0.tar.gz -C dep/msvc/qt/
           fi
-        ls -al . | grep *.gz
-        ls -al dep/msvc/qt/
-        ls "dep/msvc/qt/${{ env.QT6VERSION }}"
         sudo mv /usr/bin/qmake /usr/bin/qmake5
-        sudo ln -s $(find /${QT6_DIR} -name qmake) /usr/bin    
+        sudo ln -s $(find ${QT6_DIR} -name qmake) /usr/bin    
         else
           QT_CMAKE_VER="-DUSE_QT6=OFF"
           export CMAKE_PREFIX_PATH=/$QT5_DIR/lib/cmake
